lab3/lab_service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
spec:
  selector:
    app: lab3-frontend
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 3000
  type: NodePort
